Fixed FinanceController permission.